refactor and clean unused keyword list from the indexer
