# Keywords.API.Swagger/swagger.yml
@@ -88,25 +88,25 @@ paths:
     get:
       tags:
         - "indexer"
-      summary: "Get a keyword list of the indexed video"
-      description: "Get a keyword list of the indexed video"
-      operationId: "GetIndexerResponse"
+      summary: "Get the progress of the video indexer including key phrase extraction"
+      description: "Get the progress of video indexing and key phrase extraction"
+      operationId: "IndexerProgressAsync"
       parameters:
         - name: videoId
           in: path
-          description: Video Id to get the video ocr for
+          description: Video Id to be indexed and analysed
           required: true
           schema: 
             type: string
             format: guid
       responses:
         200:
-          description: Ocr video found
+          description: Indexing is successfully being processed
           content: 
             application/json:
               schema:
                 
-                  $ref: "#/components/schemas/IndexerResponse"
+                  $ref: "#/components/schemas/IndexerProgress"
         404:
           description: Not found
     post:
@@ -271,7 +271,7 @@ components:
             $ref: '#/components/schemas/PronunciationAssessmentDTO'
         DisplayText:
           type: string
-    IndexerResponse:
+    IndexerProgress:
       type: object
       properties:
         state:
@@ -282,7 +282,3 @@ components:
                   Succeeded ]
         processingProgress:
           type: string
-        keywords:
-          type: array
-          items:
-            $ref: '#/components/schemas/Keyword'
